--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,62 @@
-torch>=0.4.1
-torchvision>=0.2.1
-pycocotools==2.0.0
-opencv-python>=3.4.0.14
-numpy>=1.14.0
+absl-py==0.12.0
+astor==0.8.1
+astunparse==1.6.3
+cached-property==1.5.2
+cachetools==4.2.2
+certifi==2020.12.5
+chardet==4.0.0
+cycler==0.10.0
+Cython==0.29.23
+dataclasses==0.8
+flatbuffers==1.12
+gast==0.4.0
+google-auth==1.30.0
+google-auth-oauthlib==0.4.4
+google-pasta==0.2.0
+grpcio==1.37.1
+h5py==3.1.0
+idna==2.10
+importlib-metadata==4.0.1
+Keras-Applications==1.0.8
+keras-nightly==2.6.0.dev2021050600
+Keras-Preprocessing==1.1.2
+kiwisolver==1.3.1
+Markdown==3.3.4
+matplotlib==3.3.4
+numpy==1.19.5
+oauthlib==3.1.0
+onnx==1.9.0
+onnx-tf==1.8.0
+onnxruntime-gpu==1.7.0
+opencv-python==4.5.1.48
+opt-einsum==3.3.0
+Pillow==8.2.0
+protobuf==3.15.8
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycocotools==2.0.2
+pyparsing==2.4.7
+python-dateutil==2.8.1
+PyYAML==5.4.1
+requests==2.25.1
+requests-oauthlib==1.3.0
+rsa==4.7.2
+six==1.15.0
+tb-nightly==2.6.0a20210508
+tensorboard==2.5.0
+tensorboard-data-server==0.6.0
+tensorboard-plugin-wit==1.8.0
+tensorflow-addons==0.12.1
+tensorflow-estimator==2.4.0
+termcolor==1.1.0
+tf-estimator-nightly==2.5.0.dev2021032601
+tf-nightly-gpu==2.6.0.dev20210509
+torch==1.4.0
+torchvision==0.9.1
+tqdm==4.60.0
+typeguard==2.12.0
+typing-extensions==3.7.4.3
+urllib3==1.26.4
+Werkzeug==1.0.1
+wrapt==1.12.1
+zipp==3.4.1
